--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,15 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --main: #2E3236;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -30,7 +31,7 @@ body {
   margin: 0;
 }
 
-a {
+a, Link {
   color: inherit;
   text-decoration: none;
 }
